public class UnitConstants
{
    public const string ANIMATOR_VELOCITY = "Velocity";
    public const string ANIMATOR_DIRECTION = "Direction";
    public const string ANIMATOR_START_DIRECTION = "StartDirection";

    public const string ANIMATOR_STATE_IDLE_NAME = "Idle"; 
    
    public const int LERP_VALUE = 5;
}